--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -63,4 +63,5 @@
   padding-top: 10px;
   overflow: hidden;
   padding-bottom: 10px;
+  width: 100%;
 }
