--- a/styles/_pitch.scss
+++ b/styles/_pitch.scss
@@ -8,7 +8,8 @@
   justify-content: center;
   grid-template-columns: 30% 30% 30%;
   margin-top: 3%;
-  overflow: scroll;
+  overflow: hidden;
+  
 }
 
 /* Pitch entry */
